--- a/src/app/todo-item/todo-item.component.html
+++ b/src/app/todo-item/todo-item.component.html
@@ -1,3 +1,7 @@
 <div>
-  <p>Título: {{ data }}</p>
+  <p>ID: {{ data.id }}</p>
+  <p>Título: {{ data.title }}</p>
+  <p>Descrição: {{ data.description }}</p>
+  <p>Finalizado:{{ data.finished ? "Sim" : "Não" }}</p>
+  <p>Data: {{ data.date }}</p>
 </div>
